edits to layout defaults

--- a/app/_includes/dice-input.html
+++ b/app/_includes/dice-input.html
@@ -22,7 +22,7 @@
                 <button class="reset" id="undo">Undo</button>
             </div>
             <div class="row form-group center-block reset">
-                <button class="reset" id="reset">Reset All Data</button>
+                <button class="reset" id="reset">Reset Chart Data</button>
             </div>
         </div>
     </div>
