changes to font and footer

--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="site-footer">
 
   <div class="wrapper">
-   <p>Julia Nguyen &copy; 2015</p>
+   <p>made with  <span class="glyphicon glyphicon-heart"></span>  by uxjulia</p>
   </div>
 
 </footer>
