layout and project source file modifications

--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="site-footer">
 
   <div class="wrapper">
-   <p>made with  <span class="glyphicon glyphicon-heart"></span>  by uxjulia</p>
+   <p>made with  <span class="glyphicon glyphicon-heart"></span>  by <a id="name-link" href="http://www.uxjulia.com">uxjulia</a></p>
   </div>
 
 </footer>
