--- a/app/_includes/history.html
+++ b/app/_includes/history.html
@@ -1,6 +1,7 @@
 <div class="panel panel-default" id="history">
-    <div class="panel-heading">
-        Roll History
+    <div class="panel-heading clearfix">
+        <span id="roll-history-txt" class="pull-left">Roll History</span>
+        <span id="total-txt" class="pull-right"></span>
     </div>
     <div class="panel-body" id="last-roll">
     </div>
