--- a/app/_includes/javascripts.html
+++ b/app/_includes/javascripts.html
@@ -1,6 +1,5 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="../assets/tether/js/tether.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
-<script src="../assets/app.js"></script>
-<script src="../assets/Chart.min.js"></script>
-<script src="../assets/Chart.Line.js"></script>
+<script src="../assets/js/app.js"></script>
+<script src="../assets/js/Chart.min.js"></script>
