--- a/app/_includes/history.html
+++ b/app/_includes/history.html
@@ -1,8 +1,10 @@
 <div class="panel panel-default" id="history">
     <div class="panel-heading clearfix">
         <span id="roll-history-txt" class="pull-left">Roll History</span>
-        <span id="total-txt" class="pull-right"></span>
+        <span id="total-txt" class="pull-right clearfix"></span>
     </div>
-    <div class="panel-body" id="last-roll">
+    <div class="last-roll panel-body" id="last-roll">
+      <div id="lr-text">Last Roll:</div>
+        <div id="rolls"></div>
     </div>
 </div>
