--- a/app/_layouts/home.html
+++ b/app/_layouts/home.html
@@ -3,7 +3,7 @@
   {% include head.html %}
   <body>
     {% include header.html %}
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
           {% include graph.html %}
