--- a/app/_sass/_style.scss
+++ b/app/_sass/_style.scss
@@ -31,12 +31,17 @@ div.rotate_right {
   transform: rotate(16deg);
 }
 // end css for dice logo
-
+canvas#diceChart {
+  max-height: 600px;
+}
 button {
   background-color: #B7C1C7;
   border: none;
   width: 31%;
   height: 40px;
+  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 div#input {
@@ -66,9 +71,10 @@ button#undo {
   background-color: #C1A0A0;
 }
 
-.panel#history {
-  max-height: 200px;
+div#last-roll {
+  max-height: 80px;
   overflow-y: auto;
+  margin-bottom: 10px;
 }
 
 .site-icon {
@@ -76,12 +82,13 @@ button#undo {
   float: left;
   padding: 10px;
 }
+
 img#icon-svg {
   width: 50px;
 }
 
-.digit-container {
-  width: 100%;
+.digit-box {
+  margin-top: 0;
 }
 
 span.glyphicon-heart {
@@ -90,4 +97,26 @@ span.glyphicon-heart {
 
 span#total-txt {
   font-size: $base-font-size * .9;
+}
+
+span.history-text {
+  float: left;
+  padding-left: 5px;
+}
+div.last-roll {
+  font-size: $base-font-size *1.1;
+}
+
+div#rolls :first-child {
+  color: #D54343;
+}
+
+span.last-roll-title {
+  padding-right: 10px;
+}
+
+div#lr-text {
+  padding-right: 5px;
+  float: left;
+  display: inline-block;
 }
