--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -16,7 +16,7 @@
     </div>
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <p class="site-title">{{ site.title }}</p>
 
 
   </div>
