--- a/app/_includes/dice-input.html
+++ b/app/_includes/dice-input.html
@@ -4,34 +4,34 @@
         <div class="panel-body center-block">
                 <div class="form-group">
                     <div class="digit-box">
-                        <button class="digit" id="0">2</button>
-                        <button class="digit" id="1">3</button>
-                        <button class="digit" id="2">4</button>
+                        <button class="btn btn-default digit" type="button" id="0">2</button>
+                        <button class="btn btn-default digit" type="button" id="1">3</button>
+                        <button class="btn btn-default digit" type="button" id="2">4</button>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="digit-box">
-                        <button class="digit" id="3">5</button>
-                        <button class="digit" id="4">6</button>
-                        <button class="digit" id="5">7</button>
+                        <button class="btn btn-default digit" type="button" id="3">5</button>
+                        <button class="btn btn-default digit" type="button" id="4">6</button>
+                        <button class="btn btn-default digit" type="button" id="5">7</button>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="digit-box">
-                        <button class="digit" id="6">8</button>
-                        <button class="digit" id="7">9</button>
-                        <button class="digit" id="8">10</button>
+                        <button class="btn btn-default digit" type="button" id="6">8</button>
+                        <button class="btn btn-default digit" type="button" id="7">9</button>
+                        <button class="btn btn-default digit" type="button" id="8">10</button>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="digit-box">
-                        <button class="digit" id="9">11</button>
-                        <button class="digit" id="10">12</button>
-                        <button class="reset" id="undo">Undo</button>
+                        <button class="btn btn-default digit" type="button" id="9">11</button>
+                        <button class="btn btn-default digit" type="button" id="10">12</button>
+                        <button class="btn reset" type="button" id="undo">Undo</button>
                     </div>
                 </div>
                 <div class="form-group center-block reset">
-                    <button class="reset" id="reset">Reset all data</button>
+                    <button class="btn btn-default reset" type="button" id="reset">Reset all data</button>
                 </div>
         </div>
     </div>
