--- a/app/_includes/dice-input.html
+++ b/app/_includes/dice-input.html
@@ -1,4 +1,5 @@
 <div class="col-md-4" id="input">
+    {% include user.html %}
     {% include history.html %}
     <div class="panel panel-default" id="numbers">
         <div class="panel-body center-block">
