--- a/app/_sass/_style.scss
+++ b/app/_sass/_style.scss
@@ -35,6 +35,7 @@ canvas#diceChart {
 }
 button {
   width: 31%;
+  min-height: 50px;
 }
 
 div#input {
@@ -80,8 +81,18 @@ img#icon-svg {
   margin-top: 0;
 }
 
-span.glyphicon {
+span.glyphicon-heart {
   color: #D54343;
+}
+
+span.glyphicon-user {
+  color: #e3e3e3;
+  margin-right: 5px;
+}
+
+span.glyphicon-user.turn{
+  color: rgb(114,166,202);
+  margin-right: 5px;
 }
 
 span#total-txt {
