add turn indicator and player names

--- a/app/_includes/history.html
+++ b/app/_includes/history.html
@@ -4,6 +4,8 @@
         <span id="total-txt" class="pull-right clearfix"></span>
     </div>
     <div class="last-roll panel-body" id="last-roll">
+        <div id="nextUpContainer" style="display:none"><label class="control-label" id="nextUp"></label></div>
+        <div class="user-icons"></div>
       <div id="lr-text">Last Roll:</div>
         <div id="rolls"></div>
     </div>
