--- a/app/_sass/_style.scss
+++ b/app/_sass/_style.scss
@@ -33,7 +33,7 @@ div.rotate_right {
 canvas#diceChart {
   max-height: 600px;
 }
-button {
+.digit-box button {
   width: 31%;
   min-height: 50px;
 }
@@ -87,12 +87,12 @@ span.glyphicon-heart {
 
 span.glyphicon-user {
   color: #e3e3e3;
-  margin-right: 5px;
+  margin-right: 15px;
 }
 
-span.glyphicon-user.turn{
+span.glyphicon.turn {
   color: rgb(114,166,202);
-  margin-right: 5px;
+  margin-right: 15px;
 }
 
 span#total-txt {
@@ -105,6 +105,7 @@ span.history-text {
 }
 div.last-roll {
   font-size: $base-font-size *1.1;
+  padding: 5px 15px;
 }
 
 div#rolls :first-child {
@@ -123,4 +124,32 @@ div#lr-text {
 
 div#numbers .form-group {
   padding-left: 10px;
+}
+
+select#users {
+  font-size: small;
+}
+
+.panel-body#settingsPanel .form-group {
+  margin-top: 5px;
+}
+
+label#nextUp {
+  margin-top:0;
+}
+
+.user-icons {
+  margin: 5px 0;
+}
+
+button#settingsBtn {
+  color: rgb(114,166,202);
+}
+
+#collapsePanel {
+  margin-top: 15px;
+}
+
+#playerNameInputs input {
+  font-size: 14px;
 }
