minor text changes

--- a/app/_includes/dice-input.html
+++ b/app/_includes/dice-input.html
@@ -23,7 +23,7 @@
                         <button class="btn btn-sm reset" type="button" id="undo">Undo</button>
                     </div>
                 <div class="form-group center-block reset">
-                    <button class="btn btn-default reset" type="button" id="reset">Reset all data</button>
+                    <button class="btn btn-default reset" type="button" id="reset">Reset roll data</button>
                 </div>
         </div>
     </div>
