--- a/app/_includes/settings.html
+++ b/app/_includes/settings.html
@@ -1,8 +1,6 @@
-
-
 <div class="panel panel-default">
         <button id="settingsBtn" class="btn btn-sm pull-right" type="button" data-toggle="collapse" data-target="#collapsePanel" aria-expanded="false" aria-controls="collapseExample">
-            <span id="settingsText">Show Settings</span> <span class="glyphicon glyphicon-cog"></span>
+            <span id="settingsText">Settings</span> <span class="glyphicon glyphicon-cog"></span>
         </button>
     <div class="panel-body" id="settingsPanel">
         <div class="collapse" id="collapsePanel">
