edits to custom player name inputs

--- a/app/_sass/_style.scss
+++ b/app/_sass/_style.scss
@@ -130,6 +130,9 @@ select#users {
   font-size: small;
 }
 
+#settingsPanel {
+  padding-bottom: 0px;
+}
 .panel-body#settingsPanel .form-group {
   margin-top: 5px;
 }
