added functionality for timer

--- a/app/_includes/dice-input.html
+++ b/app/_includes/dice-input.html
@@ -1,5 +1,6 @@
 <div class="col-md-4" id="input">
     {% include history.html %}
+    {% include timer.html %}
     <div class="panel panel-default" id="numbers">
         <div class="panel-body center-block">
                     <div class="digit-box">
