--- a/app/_includes/settings.html
+++ b/app/_includes/settings.html
@@ -18,6 +18,9 @@
             </div>
             <div class="form-group" id="playerNameInputs">
             </div>
+            <div class="form-group" id="saveSettings">
+                <button class="btn btn-default pull-right" id="saveSettingsBtn">Save</button>
+            </div>
         </div>
     </div>
 </div>
