--- a/app/_includes/javascripts.html
+++ b/app/_includes/javascripts.html
@@ -6,5 +6,11 @@
 <script src="../assets/js/jquery.hotkeys.js"></script>
 <script src="../assets/js/app.js"></script>
 <script src="../assets/js/Chart.min.js"></script>
-<!--<script src="../assets/js/jquery.countdown.min.js"></script>-->
-<!--<script src="../assets/js/jquery.plugin.min.js"></script>-->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-31214147-5', 'auto');
+  ga('send', 'pageview');
+</script>
